public/css/mainPage.css
/* ... */
.minimap-color-scale {
    height: 100%;
    float: left;
}

.minimap-color-scale > .color-scale-text-div {
    font-size: 15px;
}

#lat-vs-long-time-color-scale > .color-scale-text-div, #cross-section-time-color-scale > .color-scale-text-div {
    padding-left: 35px;
}

#lat-vs-long-depth-color-scale > .color-scale-text-div, #cross-section-depth-color-scale > .color-scale-text-div {
    width: 100%;
    text-align: right;
}

#lat-vs-long-depth-color-scale, #cross-section-depth-color-scale {
    width: 40%;
}

#lat-vs-long-time-color-scale, #cross-section-time-color-scale {
    width: 60%;
}

#color-scale.active {
    display: block;
    background-color: rgba(255, 255, 255, 0.5);
    height: 45%;
}

.color-scale-text-div {
    height: 10%;
}

#color-scale .color-scale-text-div {
    cursor: pointer;
    background-color: white;
    color: black;
    border: none;
}

.color-scale-main-container {
    height: 90%;
}

.color-scale-picture-div {
    position: relative;
    width: 35px;
    height: 100%;
    float: left;
}

.color-scale-picture-div > img {
    width: 100%;
    height: 100%;
}

.color-scale-picture-div .hidden-colorscale-click-area {
    position: absolute;
    height: 50%;
    width: 100%;
    z-index: 99;
    cursor: pointer;
}

#main-scale-invisible-top-half {
    top: 0;
}

#main-scale-invisible-bottom-half {
    top: 50%;
}

.color-scale-and-values-container {
    height: 100%;
    margin: 0 auto;
}

.scale-values {
    position: relative;
    width: 40px;
    float: left;
    height: 100%;
}

.left-scale-minimum,
.right-scale-maximum {
    position: absolute;
    width: 100%;
}

.right-scale-maximum {
    top: 0;
}

.left-scale-minimum {
    bottom: -15px;
}

.scale-values .form-group > input {
    padding: 0;
}

#lat-vs-long-depth-color-scale .color-scale-and-values-container, #cross-section-depth-color-scale .color-scale-and-values-container {
    float: right;
}


/*remove the up/down spinners on the number input*/

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance: textfield;
}

#slideout-button {
    position: absolute;
    font-family: 'Open Sans', sans-serif;
    z-index: 99;
    left: 10px;
    top: 55px;
    border-radius: 10px;
}

.map-button {
    width: 30px;
    height: 30px;
    /*display: block;*/
    padding: 0;
    outline: none;
    border: none;
    /*box-sizing: border-box;*/
    background-color: white;
    cursor: pointer;
}

.highcharts-container {
    width: 100% !important;
    height: 100% !important;
}

#charts {
    position: absolute;
    left: 0%;
    bottom: 0%;
    height: 70%;
    width: 40%;
}

#seismicity-charts {
    position: absolute;
    right: 0%;
    height: 100%;
    width: 100%;
    max-width: 768px;
}

#cross-section-charts {
    position: absolute;
    right: 0%;
    height: 100%;
    width: 50%;
}

.seismicity-chart {
    height: 33%;
    width: 100%;
}

#seismicity-chart-sliders, #insar-chart-slider-container {
    position: absolute;
    left: 10%;
    width: 30%;
    bottom: 0%;
    height: 210px;
}

.chart-slider {
    height: 45px;
    margin-bottom: 5px
}

.seismicity-chart {
    position: relative;
}

.seismicity-charts-container {
    height: 100% !important;
    padding-top: 20px;
}

.seismicity-chart-set-coloring-button {
    position: absolute;
    z-index: 99;
    top: 0;
    right: 0;
    padding: 0 !important;
}

#cumulative-events-vs-date-container .seismicity-chart-set-coloring-button {
    position: static;
}

#cumulative-events-vs-date-chart-buttons-container {
    position: absolute;
    top: 0;
    left: 70px;
}

#cumulative-events-vs-date-chart-buttons-container > button {
    float: left;
    padding: 0 !important;
    margin-right: 10px;
}

/* make the chart containers relative by default so we can position
    buttons absolutely which change their coloring */
.seismicity-chart > div {
    position: relative;
}
/*we use pos absolute because we reduce size of map and center it vertically
to get it to exactly match the axes of the lat and long vs depth plots*/

/*we could use flexbox, but I rather not use new fancy features.
see: https://css-tricks.com/centering-css-complete-guide/*/

/*for now, leave it pos absolute. not sure if he just wanted the axes
of plots to match up with min and max lat and long of map, or if he physically
wanted minimap to exactly be aligned with axes of plots (or both?). For now, I think he just wants min and max
lat and long of plots to match minimap.
TODO: ask him, as exactly matching physically will take logic, and if he doesnt want it, will be wasted time*/

.seismicity-chart > div.side-by-side {
    position: absolute;
    width: 50%;
    height: 100%;
}

.seismicity-chart > div.side-by-side:first-child {
    left: 0;
}

.seismicity-chart > div.side-by-side:nth-child(2) {
    right: 0;
}

.seismicity-chart .chart, .cross-section-chart .chart {
    height: 100%;
}

.cross-section-chart {
    position: relative;
    width: 100%;
    height: 33%;
}

#cumulative-events-vs-date-container div {
    float: left;
}

#cumulative-events-vs-date-graph {
    width: 90%;
}

#lat-vs-long-graph {
    height: 80%;
    width: 80%;
    float: right;
}

#graph-div-minimize-button {
    margin-right: 10px;
    margin-top: 6px;
}

.chart-containers {
    width: 100%;
    height: 90%;
    float: left;
}

#chartContainer {
    width: 100%;
    height: 100%;
}

#chartContainer2 {
    display: none;
    width: 100%;
    height: 50%;
}

#graph-select-div {
    display: none;
    width: 5%;
    height: 90%;
    float: left;
}

#graph-select-div div {
    position: relative;
    height: 50%;
}

#top-graph-focus-div,
#bottom-graph-focus-div {
    position: absolute !important;
    bottom: 0px;
}

#select-graph-focus-div {
    display: none;
}

#map-options {
    width: 100%;
    height: 10%;
    max-height: 40px;
}
/* ... */

